working on array module data handling compatible with CUDA Fortran backend

--- a/doc/src/framework.tex
+++ b/doc/src/framework.tex
@@ -137,7 +137,7 @@ The following attributes are supported for this directive:
    \item [present] In case this flag is specified, the framework assumes array data to be already present on the device memory for GPU compilation and the data will not be transfered.
    \item [transferHere] In case this flag is specified, all domain dependants with \verb|intent| specified as \verb|in|, \verb|inout| or \verb|out| will be transfered to- and from the device (according to the intent). This flag may not be specified together with the \verb|present| flag (and it should not be necessary, since it has exactly opposite effects).
    \item [autoDom] In case this flag is specified, the framework will use the array dimensions that have been declared using standard Fortran 90 syntax to determine the domains for each symbol. In case the parallel domains are ommitted from the Fortran specification (in order to allow different parallelization for CPU and GPU), they still need to be specified using \verb|domName| and \verb|domSize| for symbols that are to be privatized for each thread. The parallel domains will be inserted before any independent domains picked up through the declaration, depending on the subroutine's position towards the parallel region. In addition, using \verb|autoDom| will by default enable standard \verb|accPP| and \verb|domPP| settings, if not specified otherwise. Using this flag then greatly simplifies the \verb|@domainDependant| specification part, since the directive template (everything between the directive and the corresponding \verb|@end domainDependant| statement) can be reused by symbols of different domains.
-   \item [host] In subroutines or modules that are not related to a parallel region in their callgraph, Hybrid Fortran would not know whether a symbol resides on the host or the device. This attribute makes this clear. It is mostly needed in setup code and for module arrays.
+   \item [host] In subroutines or modules that are not related to a parallel region in their callgraph, Hybrid Fortran would not know whether a symbol resides on the host or the device. This attribute makes this clear. It is mostly needed in setup code.
   \end{description}
   Please note: In case neither \verb|present| nor \verb|transferHere| is being used, Hybrid Fortran will automatically transfer all domain dependants with \verb|intent| specified as \verb|in|, \verb|inout| or \verb|out| from and to the device according to their intent - \textit{if and only if} the current subroutine is calling a kernel. In other words, the automatic behavior without specifying \verb|present| or \verb|transferHere| in host- or wrapper subroutines will only work if the domain dependants are only used within one wrapper subroutine. For real world callgraphs it is therefore usually necessary to use \verb|present| and \verb|transferHere| attributes in all host- and wrapper subroutines.
 \end{description}
